# linchemin

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
docs/source/: conf.py
src/linchemin/: __init__.py
src/linchemin/cgu/: convert.py  discgraph.py  translate.py
src/linchemin/cheminfo/: atom_mapping.py  chemical_similarity.py  constructors.py  functions.py  models.py
src/linchemin/configuration/: config.py  defaults.py
src/linchemin/interfaces/: facade.py  workflows.py
src/linchemin/rem/: clustering.py  graph_distance.py  route_descriptors.py  route_scoring.py
tests/cgu/: test_discgraph.py  test_syngraph.py
tests/cheminfo/: test_constructors.py
tests/interfaces/: test_cli.py
