[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linchemin"
dynamic = ["version"]
description = "Toolkit to create, manipulate, and query networks of Chemical Reactions and Chemicals"
license = { file = "LICENSE" }
authors = [
        { name = "Marco Stenta", email = "marco.stenta@syngenta.com" },
        { name = "Marta Pasquini", email = "marta.pasquini@syngenta.com" },
]
readme = "README.md"
# https://pypi.org/classifiers/
classifiers = [
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: OS Independent",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["reaction", "chemoinformatics", "computer-aided synthesis planning"]
requires-python = ">=3.8"
dependencies = [
        "dynaconf",
        # NOTE: hdbscan>=0.8.29 is required for compatibility with joblib 1.2.0.
        "hdbscan>=0.8.29",
        "joblib",
        "networkx",
        "numpy",
        "pandas",
        "pydantic",
        "pydot",
        "pyyaml",
        "requests",
        "rdchiral",
        "rdkit>=2022.3",
        "scikit-learn",
]

[project.optional-dependencies]
dev = [
        "bumpver",
        "flake8==6.0.0",
        "isort==5.12.0",
        "pre-commit==3.2.*",
        "pytest-cov",
        "pytest",
        "sphinx",
]

[project.urls]
Homepage = "https://linchemin.github.io"
Documentation = "https://linchemin.readthedocs.io"
Source = "https://github.com/syngenta/linchemin"
Issues = "https://github.com/syngenta/linchemin/issues"

[project.scripts]
linchemin = "linchemin.interfaces.cli:linchemin_cli"
linchemin_configure = "linchemin.configuration.config:configure"

[tool.isort]
atomic = true
py_version = "38"
skip_gitignore = true

[tool.hatch.version]
path = "src/linchemin/__about__.py"

[tool.hatch.envs.default]
path = ".hatch"
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest -v {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
